--- a/Example/FMLibrary/FMLibrary-Info.plist
+++ b/Example/FMLibrary/FMLibrary-Info.plist
@@ -2,6 +2,14 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationUsageDescription</key>
+	<string>ios7定位</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>前台定位</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>总是定位</string>
+	<key>NSContactsUsageDescription</key>
+	<string>申请联系人权限~~~</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
